// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interleave interleave([],[]) -> [] 1`] = `Array []`;

exports[`interleave interleave([],[1]) -> [] 1`] = `Array []`;

exports[`interleave interleave([1,2,3,4,5],[a,b,c,d,e,f]) -> [1,a,2,b,3,c,4,d,5,e] 1`] = `
Array [
  1,
  "a",
  2,
  "b",
  3,
  "c",
  4,
  "d",
  5,
  "e",
]
`;

exports[`interleave interleave([1,2,3,4,5],[a,b,c,d,e]) -> [1,a,2,b,3,c,4,d,5,e] 1`] = `
Array [
  1,
  "a",
  2,
  "b",
  3,
  "c",
  4,
  "d",
  5,
  "e",
]
`;

exports[`interleave interleave([1,2,3,4,5],[a,b,c,d]) -> [1,a,2,b,3,c,4,d,5] 1`] = `
Array [
  1,
  "a",
  2,
  "b",
  3,
  "c",
  4,
  "d",
  5,
]
`;

exports[`interleave interleave([1,2],[3,4]) -> [1,3,2,4] 1`] = `
Array [
  1,
  3,
  2,
  4,
]
`;

exports[`interleave interleave([1,2],[3]) -> [1,3,2] 1`] = `
Array [
  1,
  3,
  2,
]
`;

exports[`interleave interleave([1],[]) -> [1] 1`] = `
Array [
  1,
]
`;

exports[`interleave interleave([1],[2]) -> [1,2] 1`] = `
Array [
  1,
  2,
]
`;
